about us page update

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -41,12 +41,7 @@ body {
 #main-content {
     background-color: var(--main-content-bg-color);
 }
-/*
-#about-main-img {    
-    background: url('../images/header-img.jpeg');
-    height:400px; 
-    width:auto;
-    background-repeat: no-repeat; 
-    background-size: cover;
+
+#about-header, #about-art-img {
+    height: 400px;    
 }
-*/
