--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -42,6 +42,24 @@ body {
     background-color: var(--main-content-bg-color);
 }
 
-#about-header, #about-art-img {
+#about-header {
     height: 400px;    
+}
+
+
+#about-art-img {
+    height: 400px;
+    background: url("https://images.unsplash.com/photo-1630090896228-88e5ea707294?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1170&q=80");
+    background-position: center;
+    background-repeat: no-repeat;   
+    background-size: cover;
+}
+
+#teamProfileSlides{
+    padding: 0;
+}
+
+#teamProfileSlides .carousel-caption, #teamProfileSlides .carousel-indicators{
+    width: auto;
+    background-color: darkgrey;    
 }
