--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1,10 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,600;1,400;1,500;1,600;1,700&display=swap');
 
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    width: 100%;
+* {   
     font-size: 16px;
     font-family:  'Cabin', sans-serif;
     --navbar-color: #C72553;
@@ -49,11 +45,14 @@ body {
 
 #about-header {
     height: 400px;    
+    width: 100%;
+    background-image: url('https://images.unsplash.com/photo-1559724551-9f8b249ae5a8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
+    background-size: cover;
 }
 
 
 #about-art-img {
-    height: 400px;
+    height: 200px;
     background: url("../images/meet-team-img.jpeg");
     background-position: center;
     background-repeat: no-repeat;   
@@ -67,4 +66,16 @@ body {
 #teamProfileSlides .carousel-caption, #teamProfileSlides .carousel-indicators{
     width: auto;
     background-color: darkgrey;    
+}
+
+.carousel-item img{
+    width: 500px;
+    height: 500px;   
+    object-fit: cover;
+}
+
+#jeremy-prof-img {
+    object-position: 0 0;
+    position: relative;
+    top: 0;
 }
